// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Adapter should transform a stage array to a dashboard schema 1`] = `
{
  "teams": [
    Card {
      "count": 0,
      "label": "MOCK_TEAM",
      "tags": {
        "allocated": 0,
        "overdue": 0,
      },
      "type": "team",
      "value": 1,
    },
    Card {
      "count": 2,
      "label": "MOCK_TEAM",
      "tags": {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "team",
      "value": 2,
    },
    Card {
      "count": 0,
      "label": "MOCK_TEAM",
      "tags": {
        "allocated": 0,
        "overdue": 0,
      },
      "type": "team",
      "value": 3,
    },
  ],
  "user": [
    Card {
      "count": 1,
      "label": "Cases",
      "tags": {
        "allocated": 0,
        "overdue": 1,
      },
      "type": undefined,
      "value": undefined,
    },
  ],
}
`;

exports[`Dashboard Adapter should transform a stage array to a dashboard schema when deadlines are disabled 1`] = `
{
  "teams": [
    Card {
      "count": 0,
      "label": "MOCK_TEAM",
      "tags": {
        "allocated": 0,
        "overdue": 0,
      },
      "type": "team",
      "value": 1,
    },
    Card {
      "count": 2,
      "label": "MOCK_TEAM",
      "tags": {
        "allocated": 1,
        "overdue": 0,
      },
      "type": "team",
      "value": 2,
    },
    Card {
      "count": 0,
      "label": "MOCK_TEAM",
      "tags": {
        "allocated": 0,
        "overdue": 0,
      },
      "type": "team",
      "value": 3,
    },
  ],
  "user": [
    Card {
      "count": 1,
      "label": "Cases",
      "tags": {
        "allocated": 0,
        "overdue": 0,
      },
      "type": undefined,
      "value": undefined,
    },
  ],
}
`;

exports[`Team Workstack Adapter should hide unworkable 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "dashboard": [
    Card {
      "count": 3,
      "label": "MOCK_CASETYPE",
      "tags": {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "workflow",
      "value": "DEFAULT",
    },
    Card {
      "count": 3,
      "label": "MOCK_CASETYPE",
      "tags": {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "workflow",
      "value": "WCS",
    },
  ],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234567/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2020-12-31",
      "deadlineDisplay": "31/12/2020",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234567/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234567/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2020-12-31",
      "deadlineDisplay": "31/12/2020",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234567/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "caseReference": "A/1234568/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-02",
      "deadlineDisplay": "02/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "06-01-2200",
      "deadlineDisplay": null,
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": 1,
    },
  ],
  "label": "MOCK_TEAM",
  "teamMembers": [],
}
`;

exports[`Team Workstack Adapter should transform a stage array to a team workstack schema 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "dashboard": [
    Card {
      "count": 4,
      "label": "MOCK_CASETYPE",
      "tags": {
        "allocated": 1,
        "overdue": 2,
      },
      "type": "workflow",
      "value": "DEFAULT",
    },
    Card {
      "count": 4,
      "label": "MOCK_CASETYPE",
      "tags": {
        "allocated": 2,
        "overdue": 2,
      },
      "type": "workflow",
      "value": "WCS",
    },
    Card {
      "count": 1,
      "label": "MOCK_CASETYPE",
      "tags": {
        "allocated": 0,
        "overdue": 0,
      },
      "type": "workflow",
      "value": "FOI",
    },
  ],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234567/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-01",
      "deadlineDisplay": "01/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234567/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234567/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2020-12-31",
      "deadlineDisplay": "31/12/2020",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234567/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234567/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2020-12-31",
      "deadlineDisplay": "31/12/2020",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234567/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "caseReference": "A/1234568/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-02",
      "deadlineDisplay": "02/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
    {
      "FOIRequesterDisplay": "testNameFOIRequester",
      "active": true,
      "applicantOrConstituentCorrespondentDisplay": "",
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "FOI",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "correspondents": {
        "correspondents": [
          {
            "fullname": "testNameFOIRequester",
            "is_primary": "true",
            "uuid": "uuid123",
          },
        ],
      },
      "data": {
        "CaseContributions": "[{}]",
      },
      "deadline": "2200-02-03",
      "deadlineDisplay": "03/02/2200",
      "memberCorrespondentDisplay": "",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondent": {
        "fullname": "testNameFOIRequester",
        "is_primary": "true",
        "uuid": "uuid123",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
        "primaryCorrespondentFullName": "testNameFOIRequester",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "06-01-2200",
      "deadlineDisplay": null,
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234570/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-05",
      "deadlineDisplay": "05/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234570/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
  ],
  "label": "MOCK_TEAM",
  "teamMembers": [],
}
`;

exports[`Team Workstack Adapter should transform a stage array to a team workstack schema ordered by systemCalculatedPriority 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "dashboard": [
    Card {
      "count": 4,
      "label": "MOCK_CASETYPE",
      "tags": {
        "allocated": 2,
        "overdue": 2,
      },
      "type": "workflow",
      "value": "WCS",
    },
    Card {
      "count": 1,
      "label": "MOCK_CASETYPE",
      "tags": {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "workflow",
      "value": "DEFAULT",
    },
  ],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {
        "systemCalculatedPriority": 97,
      },
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {
        "systemCalculatedPriority": 56.3,
      },
      "deadline": "06-01-2200",
      "deadlineDisplay": null,
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234570/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {
        "systemCalculatedPriority": 43.9,
      },
      "deadline": "1900-01-05",
      "deadlineDisplay": "05/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234570/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "caseReference": "A/1234568/19",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {
        "systemCalculatedPriority": 35,
      },
      "deadline": "1900-01-02",
      "deadlineDisplay": "02/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {
        "systemCalculatedPriority": 13.43,
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_TEAM",
  "teamMembers": [],
}
`;

exports[`User Workstack Adapter should transform a stage array to a user workstack schema 1`] = `
{
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedTopic": "MOCK_TOPIC",
      "assignedTopicDisplay": "MOCK_TOPIC",
      "assignedUserDisplay": "MOCK_USER",
      "caseType": "DEFAULT",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2200-01-01",
      "deadlineDisplay": "01/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": undefined,
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 1,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2200-01-02",
      "deadlineDisplay": "02/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": undefined,
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
    {
      "FOIRequesterDisplay": {},
      "active": false,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": undefined,
      },
      "stageType": "A",
      "stageTypeDisplay": "Closed",
      "stageTypeWithDueDateDisplay": "Closed",
      "teamUUID": 2,
      "userUUID": null,
    },
  ],
  "label": "My Cases",
}
`;

exports[`Workflow Workstack Adapter should add the case ref and primary correspondent to primaryCorrespondentAndRefDisplay 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "applicantOrConstituentCorrespondentDisplay": "",
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "correspondents": {
        "correspondents": [
          {
            "fullname": "testName",
            "is_primary": "true",
            "uuid": "uuid123",
          },
        ],
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "memberCorrespondentDisplay": "",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondent": {
        "fullname": "testName",
        "is_primary": "true",
        "uuid": "uuid123",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
        "primaryCorrespondentFullName": "testName",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should add the case ref and requester to primaryCorrespondentAndRefDisplay 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": "testRequesterName",
      "active": true,
      "applicantOrConstituentCorrespondentDisplay": "",
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/21",
      "caseType": "FOI",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "correspondents": {
        "correspondents": [
          {
            "fullname": "testRequesterName",
            "is_primary": "true",
            "uuid": "uuid123",
          },
        ],
      },
      "data": {
        "CaseContributions": "[{}]",
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "memberCorrespondentDisplay": "",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondent": {
        "fullname": "testRequesterName",
        "is_primary": "true",
        "uuid": "uuid123",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/21",
        "primaryCorrespondentFullName": "testRequesterName",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should add the fullname and postcode of primaryCorrespondent to primaryCorrespondent 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "applicantOrConstituentCorrespondentDisplay": "",
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "COMP/1234568/19",
      "caseType": "COMP",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "correspondents": {
        "correspondents": [
          {
            "fullname": "testName",
            "is_primary": "false",
            "postcode": "postcode1",
            "uuid": "uuid123",
          },
          {
            "fullname": "primaryC",
            "is_primary": "true",
            "postcode": "postcode2",
            "uuid": "uuid456",
          },
        ],
      },
      "data": {
        "CaseContributions": "[{}]",
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "memberCorrespondentDisplay": "",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondent": {
        "fullname": "primaryC",
        "is_primary": "true",
        "postcode": "postcode2",
        "uuid": "uuid456",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "COMP/1234568/19",
        "primaryCorrespondentFullName": "primaryC",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should add the primary correspondent to FOIRequester field for FOI case type 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should hide unworkable 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "dashboard": [
    Card {
      "count": 3,
      "label": "MOCK_STAGETYPE",
      "tags": {
        "allocated": 2,
        "overdue": 2,
      },
      "type": "stage",
      "value": "A",
    },
    Card {
      "count": 1,
      "label": "MOCK_STAGETYPE",
      "tags": {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "stage",
      "value": "B",
    },
  ],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2200-01-06",
      "deadlineDisplay": "06/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-07",
      "deadlineDisplay": "07/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "B",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234570/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-05",
      "deadlineDisplay": "05/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234570/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
  ],
  "label": "MOCK_CASETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack at MPAM_QA_CLEARANCE_REQ with ClearanceDueDate 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "MPAM",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {
        "ClearanceDueDate": "2020-12-10",
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_QA_CLEARANCE_REQ",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE due 10/12/2020",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack schema 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "dashboard": [
    Card {
      "count": 4,
      "label": "MOCK_STAGETYPE",
      "tags": {
        "allocated": 2,
        "overdue": 2,
      },
      "type": "stage",
      "value": "A",
    },
    Card {
      "count": 1,
      "label": "MOCK_STAGETYPE",
      "tags": {
        "allocated": 1,
        "overdue": 1,
      },
      "type": "stage",
      "value": "B",
    },
  ],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2200-01-06",
      "deadlineDisplay": "06/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-07",
      "deadlineDisplay": "07/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "B",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234570/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-05",
      "deadlineDisplay": "05/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234570/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
  ],
  "label": "MOCK_CASETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack schema 2`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-04",
      "deadlineDisplay": "04/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234569/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "2200-01-06",
      "deadlineDisplay": "06/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234569/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 1,
    },
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "caseReference": "A/1234570/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {},
      "deadline": "1900-01-05",
      "deadlineDisplay": "05/01/1900",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": undefined,
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234570/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": null,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with DueDate with contributionDueDate 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "data": {
        "DueDate": "2020-12-10",
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "dueContribution": "2020-12-12",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "nextContributionDueDate": "12/12/2020",
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE due 10/12/2020",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with a contributionDueDate 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "contributions": "Due",
      "data": {
        "CaseContributions": "[{"data": {"contributionDueDate":"2020-12-12"}}]",
      },
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "dueContribution": "2020-12-12",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "nextContributionDueDate": "12/12/2020",
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_DRAFT with contributions as Cancelled 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "contributions": "Cancelled",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_DRAFT",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE (Contributions Received)",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_DRAFT with contributions as Received 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "contributions": "Received",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_DRAFT",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE (Contributions Received)",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_DRAFT with contributions as null 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "contributions": null,
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_DRAFT",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_DRAFT_REQUESTED_CONTRIBUTION with dueContribution 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "contributions": "Due",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "dueContribution": "2020-12-12",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "nextContributionDueDate": "12/12/2020",
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_DRAFT_REQUESTED_CONTRIBUTION",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE due: 12/12/2020",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_DRAFT_REQUESTED_CONTRIBUTION with dueContribution as null 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "dueContribution": null,
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_DRAFT_REQUESTED_CONTRIBUTION",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_TRIAGE with contributions as Cancelled 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "contributions": "Cancelled",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_TRIAGE",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE (Contributions Received)",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_TRIAGE with contributions as Received 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "contributions": "Received",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_TRIAGE",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE (Contributions Received)",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_TRIAGE with contributions as null 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "contributions": null,
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_TRIAGE",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_TRIAGE_REQUESTED_CONTRIBUTION with dueContribution 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "contributions": "Due",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "dueContribution": "2020-12-12",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "nextContributionDueDate": "12/12/2020",
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_TRIAGE_REQUESTED_CONTRIBUTION",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE due: 12/12/2020",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with at MPAM_TRIAGE_REQUESTED_CONTRIBUTION with dueContribution as null 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "dueContribution": null,
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_TRIAGE_REQUESTED_CONTRIBUTION",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with no contributeDueDate and stage type not matching contributionReceivedStages 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "A",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;

exports[`Workflow Workstack Adapter should transform a stage array to a workflow workstack with no contributeDueDate but stage type matching contributionReceivedStages 1`] = `
{
  "allocateToTeamEndpoint": "/allocate/team",
  "allocateToUserEndpoint": "/allocate/user",
  "allocateToWorkstackEndpoint": "/unallocate/",
  "columns": [],
  "items": [
    {
      "FOIRequesterDisplay": {},
      "active": true,
      "assignedTeamDisplay": "MOCK_TEAM",
      "assignedUserDisplay": "MOCK_USER",
      "caseReference": "A/1234568/19",
      "caseType": "WCS",
      "caseTypeDisplayFull": "MOCK_CASETYPE",
      "deadline": "2200-01-03",
      "deadlineDisplay": "03/01/2200",
      "mpWithOwnerDisplay": {
        "mp": "",
        "owner": "MOCK_USER",
      },
      "primaryCorrespondentAndRefDisplay": {
        "caseReference": "A/1234568/19",
      },
      "stageType": "MPAM_TRIAGE",
      "stageTypeDisplay": "MOCK_STAGETYPE",
      "stageTypeWithDueDateDisplay": "MOCK_STAGETYPE",
      "teamUUID": 2,
      "userUUID": 2,
    },
  ],
  "label": "MOCK_STAGETYPE",
  "teamMembers": [],
}
`;
